Resubmit version: fixed double follow issue, follow/unfollow link issue, improved post readability and accessibility of username links, & made current user info readily available on profile page

--- a/public/home.css
+++ b/public/home.css
@@ -1,4 +1,9 @@
 /*css for home page*/
+html, body{
+	margin:0;
+	padding:0;
+}
+
 #home_body{
 	background-image: url("images/gramaphone_3.jpg");
 	background-size: 100% 100%;
@@ -52,13 +57,28 @@ li{
 	margin-top: 40px;
 }
 
-.live_post{
-/*	background-color: rgba(49,189,127,.5);
-	color:rgb(0,0,0);
-	border-radius: 15px;*/
+.all_users{
 	height: auto;
-	background-color: rgba(16,17,64,.3);
+	width: 600px;
+	text-align: center;
+	margin: 10px auto;
+	margin-top: 40px;
+}
+
+.live_post{
+	height: auto;
+	background-color: rgba(16,17,64,.5);
     border-radius: 20px;
+    padding-left: 10px;
+}
+
+#nodec:link,#nodec:visited, #nodec:active {
+	text-decoration: none;
+	color: black;
+}
+
+#nodec:hover{
+	color: #5C5CFF;
 }
 
 #prof_username{
@@ -201,8 +221,6 @@ li{
 	font-size: 20px;
 
 }
-
-#nodec:link,#nodec:visited, #nodec:active {
-	text-decoration: none;
-	color: black;
-}
+/*.button{
+	margin-left: 140px;
+}*/
